商品情報登録編集フォームの部分テンプレート化

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,28 +3,7 @@
   <section>
     <div class="posts-new-contents">
       <h1 class="form-title">商品情報を登録する</h1>
-
-      <%= form_with model: @item, local: true do |f| %>
-      <%= render "devise/shared/error_messages", model: f.object %>
-      <div class="img-field" id="image-list">
-
-      <label class="form-image">
-        <i class="fas fa-images fa-2x "></i>
-        <%= f.file_field :images, id:"item-image" ,name: 'item[images][]' ,class: "hidden"%>
-      </label>
-
-      </div>
-      <p class="img-explanation">
-        クリックして商品写真をアップロード
-      </p>
-        <div class="item-new-content">
-          <%= f.text_field :name, class:"item-field", id:"name", placeholder:"商品名", maxlength:"100" %>
-        </div>
-        <div class="item-new-content">
-          <%= f.text_area :explanation, class:"item-field", id:"explanation", placeholder:"商品概要(発売日、メーカー、サイズ、材質、量、原材料、原産国など)", maxlength:"250" %>
-        </div>
-        <%= f.submit "商品情報を登録する" ,class:"posts-new-send" %>
-      <%end%>
+      <%= render partial: 'items/form', locals: { item: @item } %>
     </div>
   </section>
   <%= render 'shared/footer' %>
