--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -25,7 +25,7 @@
         <%= link_to "お店情報削除", shop_path(@shop), class: "item-edit-buttton", method: :delete %>
       </div>
       <div class="review-add-button">
-        <%# link_to "レビュー投稿", new_shop_shop_review_path(@shop), class: "item-edit-buttton" %>
+        <%= link_to "レビュー投稿", new_shop_shop_review_path(@shop), class: "item-edit-buttton" %>
       </div>
 
 
