--- a/app/assets/stylesheets/devise/new_account.css
+++ b/app/assets/stylesheets/devise/new_account.css
@@ -20,6 +20,10 @@
   margin-right: auto;
 }
 
+.new-contents > p {
+  color: #aa998a;
+}
+
 .new-content {
   display: flex;
   align-items: center;
