--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -9,8 +9,8 @@
       <%= link_to new_post_path do %>
         <i class="far fa-images fa-lg user-icon"></i>
       <% end %>
-      <%= image_tag current_user.account.images[0], class: "header-user-icon", id: "edit-lists" if @user.account.images.attached?%>
-      <% if @user.account.images.length == 0%>
+      <%= image_tag current_user.account.images[0], class: "header-user-icon", id: "edit-lists" if current_user.account.images.attached?%>
+      <% if current_user.account.images.length == 0%>
         <%= image_tag "profile-user.png" ,class:"header-user-icon" ,id: "edit-lists" %>
       <% end %>
       <ul class="edit-lists hidden" id="edit-pull-down">
