viewファイルの修正

--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -51,6 +51,10 @@
   margin-bottom: 10px;
 }
 
+.follow-post {
+  border-bottom: solid 1px #eadfca;
+}
+
 /* アイコン部分 */
 .post-icon-lists {
   align-content: center;
