--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
         <% @posts.each do |post|%>
           <li class="follow-post">
             <div class="post-title">
-              <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.id)%>
+              <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id)%>
               <div class="title-content">
                 <p class="title-content-nickname"><%= post.account.nickname %></p>
                 <p class="title-content-id"><%= post.account.account_id %></p>
@@ -19,7 +19,7 @@
               <dl class="post-icon-lists">
                 <dt><i class="far fa-comment fa-lg"></i></dt>
                 <dd>コメント3件<dd>
-                <dt><i class="far fa-heart fa-lg"></i></dt>
+                <dt><i class="far fa-heart fa-lg"></i></dt> 
                 <dd>いいね3件<dd>
               </dl>
             <div class="post-caption">
