--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
               </div>
             </div>
             <div class="post-pic">
-              <%= image_tag post.images[0] ,class: "post-pic"%>
+              <%= link_to image_tag(post.images[0] ,class: "post-pic"), "#"%>
             </div>
               <dl class="post-icon-lists">
                 <dt><i class="far fa-comment fa-lg"></i></dt>
