--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,9 @@
     <%= link_to shops_path do %>
       <i class="fas fa-store fa-lg user-icon"></i>
     <% end %>
+    <%= link_to calendars_path do %>
+      <i class="far fa-calendar-alt user-icon fa-lg "></i>
+    <% end %>
     <%= link_to new_post_path do %><i class="far fa-images fa-lg user-icon"></i><% end %>
       <%= link_to image_tag(current_user.account.images[0], class: "header-user-icon"), home_path(current_user) if current_user.account.images.attached?%>
       <% if current_user.account.images.length == 0%>
