登録ボタン修正

--- a/app/assets/stylesheets/calenders/index.css
+++ b/app/assets/stylesheets/calenders/index.css
@@ -53,7 +53,7 @@ td {
   border-radius: 16px;
   font-size: 15px;
   display: block;
-  margin-bottom: 100px;
+  margin: 50px 0 100px 0;
 }
 
 /* カレンダー部分 */
