--- a/app/assets/stylesheets/items_review/new.css
+++ b/app/assets/stylesheets/items_review/new.css
@@ -12,6 +12,12 @@
   margin-bottom: 20px;
 }
 
+.review-star-icon > img {
+  height: 15vh;
+  color: #9ec3bc;
+  filter: invert(72%) sepia(26%) saturate(6428%) hue-rotate(1deg) brightness(105%) contrast(102%);
+}
+
 .review-star-info {
   color: #aa998a;
   text-align: center;
