shop　newのview評価実装

--- a/app/views/shop_reviews/new.html.erb
+++ b/app/views/shop_reviews/new.html.erb
@@ -4,14 +4,21 @@
     <div class="review-new-contents">
       <h1 class="form-title">お店のレビューを投稿する</h1>
       <%= form_with(model: [@shop, @review], local: true) do |f| %>   
-      <%= render "devise/shared/error_messages", model: f.object %>
-        <div class="review-star-icon">
-          <i class="fas fa-star s-color fa-3x"></i>
-          <i class="fas fa-star s-color fa-3x"></i>
-          <i class="fas fa-star s-color fa-3x"></i>
-          <i class="fas fa-star-half-alt s-color fa-3x"></i>
-          <i class="far fa-star s-color fa-3x"></i>
+        <%= render "devise/shared/error_messages", model: f.object %>
+        <div class="review-star-icon" id="evaluate_stars">
+          <%= f.hidden_field :rate, class:"item-field" %>
         </div>
+        <script>
+          $('#evaluate_stars').raty({
+            size     : 20,
+            half: true,
+            starOn: "<%= asset_path('star.png') %>",
+            starOff: "<%= asset_path('star-empty.png') %>",
+            starHalf: "<%= asset_path('star-half-empty.png') %>",
+            scoreName: 'shop_review[rate]' //登録するモデル名とカラム名を記述
+          });
+        </script>
+
         <div class="review-star-info">
           <p>星の数で評価をしましょう</p>
         </div>
