--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,10 +2,21 @@
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
     <nav>
-      <%= link_to posts_path do %><i class="fas fa-home fa-lg user-icon"></i><% end %>
-      <i class="fas fa-search fa-lg user-icon"></i>
+      <%= link_to posts_path do %>
+        <i class="fas fa-home fa-lg user-icon"></i>
+      <% end %>
+      <%# <i class="fas fa-search fa-lg user-icon"></i>
       <i class="far fa-envelope fa-lg user-icon"></i>
-      <i class="far fa-bell fa-lg user-icon"></i>
+      <i class="far fa-bell fa-lg user-icon"></i> %>
+      <%= link_to items_path do %>
+        <i class="fas fa-gifts fa-lg user-icon"></i>
+      <% end %>
+      <%= link_to shops_path do %>
+        <i class="fas fa-store fa-lg user-icon"></i>
+      <% end %>
+      <%= link_to calendars_path do %>
+        <i class="far fa-calendar-alt user-icon fa-lg "></i>
+      <% end %>
       <%= link_to new_post_path do %>
         <i class="far fa-images fa-lg user-icon"></i>
       <% end %>
