--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,11 @@
         <% @posts.each do |post|%>
           <li class="follow-post">
             <div class="post-title">
-              <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id)%>
+              <%= link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id) if post.account.images.attached?%>
+              <% if post.account.images.length == 0%>
+                <%= link_to image_tag('profile-user.png', class: "title-icon"), home_path(post.user_id) %>
+              <% end %>
+              <%# link_to image_tag(post.account.images[0], class: "title-icon"), home_path(post.user_id)%>
               <div class="title-content">
                 <p class="title-content-nickname"><%= post.account.nickname %></p>
                 <p class="title-content-id"><%= post.account.account_id %></p>
