star画像のpath付与

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -51,6 +51,10 @@
       <script>
         $('.item-review-bottom').raty({
             readOnly: true,
+            half: true,
+            starOn: "<%= asset_path('star.png') %>",
+            starOff: "<%= asset_path('star-empty.png') %>",
+            starHalf: "<%= asset_path('star-half-empty.png') %>",
             score: function() {
               return $(this).attr('data-score');
             },
