フォロワー一覧view作成

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,3 +1,4 @@
+<% console%>
 <main class="mypage">
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
@@ -84,6 +85,40 @@
       </div>
 
 `    </div>
+
+<table>
+    <caption>フォロー中</caption>
+    <thead>
+        <tr>
+            <th>ユーザー名</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @following_users.each do |following_user| %>
+        <tr>
+            <td><%= following_user.name %></td>
+            <td><%= link_to 'フォロー外す', relationships_path(user_id: @user.id), method: :delete %></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table><br><br>
+
+<table>
+    <caption>フォロワー</caption>
+    <thead>
+        <tr>
+            <th>フォロワー名</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @follower_users.each do |follower_user| %>
+        <tr>
+            <td><%= follower_user.name %></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
   </section>
   <%= render 'shared/footer' %>
 </main>
