--- a/app/views/home/follower.html.erb
+++ b/app/views/home/follower.html.erb
@@ -1,4 +1,5 @@
 <div class="mypage-contents">
+  <%= render 'shared/header' %>
   <%# ユーザー情報 %>
     <div class="mypage-top">
       <%= image_tag @user.account.images[0] ,class: "mypage-user-icon" if @user.account.images.attached?%>
@@ -51,4 +52,5 @@
         </ul>
     </div>
   </section>
+  <%= render 'shared/footer' %>
 </div>
