--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -23,6 +23,23 @@
   margin-bottom: 50px;
 }
 
+.shop-contents-link {
+  display: flex;
+}
+
+.shop-search-buttton {
+  background-color: #9ec3bc;
+  color: white;
+  height: 30px;
+  line-height: 30px;
+  width: 150px;
+  text-align: center;
+  border-radius: 16px;
+  font-size: 15px;
+  display: block;
+  margin: 0 0 50px 20px;
+}
+
 /* 商品リスト */
 .item-lists {
   width: 100%;
