--- a/app/views/shops/search.html.erb
+++ b/app/views/shops/search.html.erb
@@ -5,10 +5,19 @@
       <h1 class="item-review-title">Shop Review</h1>
       
       <div class="shop-contents-link">
-        <%= link_to "お店情報登録", new_shop_path, class: "item-register-buttton" %>
-        <%= link_to "お店を検索する", search_shops_path, class: "shop-search-buttton" %>
+        <%= link_to "一覧に戻る", shops_path, class: "item-register-buttton" %>
       </div> 
 
+     <%# ショップ検索 %>
+      <%= search_form_for @q, url: search_shops_path do |f| %>
+        <div class="search-field">
+          <%= f.label :name, 'キーワード' %>
+          <%= f.text_field :name, placeholder: 'キーワード検索', class:"search-small-field", value: params[:q]&.dig(:caption)%>
+        </div>
+        <div class="search-field">
+          <%= f.submit '検索', class:"search-button" %>
+        </div>
+      <% end %>
 
       <%# レビュー一覧 %>
       <ul class="item-lists">
@@ -42,3 +51,5 @@
   </section>
   <%= render 'shared/footer' %>
 </main>
+
+      
