--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,10 @@
     <section class="main-left">
       <h1 class="item-review-title">Item Review</h1>
       
-      <%= link_to "商品情報登録", new_item_path, class: "item-register-buttton" %>
+      <div class="shop-contents-link">
+        <%= link_to "商品情報登録", new_item_path, class: "item-register-buttton" %>
+        <%= link_to "商品を検索する", search_items_path, class: "shop-search-buttton" %>
+      </div> 
 
       <%# レビュー一覧 %>
       <ul class="item-lists">
