--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -2,14 +2,14 @@
   <%= render 'shared/header' %>
   <section class="index-main-contents">
     <section class="main-left">
-      <h1 class="item-review-title">Shop Search</h1>
+      <h1 class="item-review-title">Item Search</h1>
       
       <div class="shop-contents-link">
-        <%= link_to "一覧に戻る", shops_path, class: "item-register-buttton" %>
+        <%= link_to "一覧に戻る", items_path, class: "item-register-buttton" %>
       </div> 
 
      <%# ショップ検索 %>
-      <%= search_form_for @q, url: search_shops_path do |f| %>
+      <%= search_form_for @q, url: search_items_path do |f| %>
         <div class="search-field">
           <%= f.label :name, 'キーワード' %>
           <%= f.text_field :name, placeholder: 'キーワード検索', class:"search-small-field", value: params[:q]&.dig(:caption)%>
@@ -21,14 +21,14 @@
 
       <%# レビュー一覧 %>
       <ul class="item-lists">
-        <% @shops.each do |shop|%>
-          <%= link_to shop_path(shop) do %>
+        <% @items.each do |item|%>
+          <%= link_to item_path(item) do %>
             <li class="item-list">
               <div class="item-image">
-                <%= image_tag shop.images[0] %>
+                <%= image_tag item.images[0] %>
               </div>
               <div class="item-contents">
-                <div class="item-title"><%= shop.name %></div>
+                <div class="item-title"><%= item.name %></div>
                 <div class="item-evaluation">
                   <div class="star-icon">
                     <i class="fas fa-star s-color"></i>
@@ -37,7 +37,7 @@
                     <i class="fas fa-star-half-alt s-color"></i>
                     <i class="far fa-star s-color"></i>
                   </div>
-                  <div class="item-date"><p>レビュー12件</p><p><%= shop.updated_at.to_s(:datetime) %></p></div>
+                  <div class="item-date"><p>レビュー12件</p><p><%= item.updated_at.to_s(:datetime) %></p></div>
                 </div>
               </div>
             </li>
