--- a/app/views/shops/search.html.erb
+++ b/app/views/shops/search.html.erb
@@ -30,14 +30,7 @@
               <div class="item-contents">
                 <div class="item-title"><%= shop.name %></div>
                 <div class="item-evaluation">
-                  <div class="star-icon">
-                    <i class="fas fa-star s-color"></i>
-                    <i class="fas fa-star s-color"></i>
-                    <i class="fas fa-star s-color"></i>
-                    <i class="fas fa-star-half-alt s-color"></i>
-                    <i class="far fa-star s-color"></i>
-                  </div>
-                  <div class="item-date"><p>レビュー12件</p><p><%= shop.updated_at.to_s(:datetime) %></p></div>
+                  <div class="item-date"><p><%= shop.updated_at.to_s(:datetime) %></p></div>
                 </div>
               </div>
             </li>
