--- a/app/assets/stylesheets/home/show.css
+++ b/app/assets/stylesheets/home/show.css
@@ -161,7 +161,7 @@
   color: #aa998a;
   font-weight: bold;
   position: relative;
-  top: 15vh;
+  top: 18posts-imagevh;
   left: 20px;
   margin-right: 30px;
 }
