--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,13 +12,13 @@
         <% @post.images.each do |image| %>
           <%= image_tag image, class: 'new-images' %>
         <% end %>
-        <label class="form-image">
-          <i class="fas fa-images fa-2x "></i>
-          <%= f.file_field :images, id:"posts-image" ,name: 'post[images][]' ,class: "hidden",multiple: true, data: {index: 0}%>
-        </label>
       </div>
+      <label class="form-image">
+        <i class="fas fa-images fa-2x "></i>
+        <%= f.file_field :images, id:"posts-image" ,name: 'post[images][]' ,class: "hidden",multiple: true, data: {index: 0}%>
+      </label>
       <p class="img-explanation">
-        クリックして写真をアップロード
+        アイコンをクリックして写真をアップロード（4枚まで）
       </p>
         <div class="posts-new-content">
           <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く", maxlength:"250" %>
