--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -150,3 +150,10 @@
 #comment_form {
   width: 50%;
 }
+
+.pet-icon {
+  display: block;
+  margin-top: 30px;
+  text-align: center;
+  color: #aa998a;
+}
