--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,7 +34,7 @@
     </section>
 
     <%# ユーザー情報 %>
-    <%= render 'shared/userpro'%>
+    <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
   </section>
   <%= render 'shared/footer' %>
 </main>
