--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -31,7 +31,8 @@
     </section>
 
     <%# ユーザー情報 %>
-    <%= render 'shared/userpro'%>
+  <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
+
   </section>
   <%= render 'shared/footer' %>
 </main>
