--- a/app/views/shops/search.html.erb
+++ b/app/views/shops/search.html.erb
@@ -40,7 +40,7 @@
     </section>
 
     <%# ユーザー情報 %>
-    <%= render 'shared/userpro'%>
+  <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
   </section>
   <%= render 'shared/footer' %>
 </main>
