--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -59,7 +59,7 @@
 
   </section>
    <%# ユーザー情報 %>
-    <%= render 'shared/userpro'%>
+  <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
 </section>
   <%= render 'shared/footer' %>
 </main>
