--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -53,7 +53,7 @@
 
   </section>
    <%# ユーザー情報 %>
-    <%= render 'shared/userpro'%>
+    <%= render partial: 'shared/userpro', locals: { pet: @pet } %>
 </section>
   <%= render 'shared/footer' %>
 </main>
