--- a/app/views/home/profile_new.html.erb
+++ b/app/views/home/profile_new.html.erb
@@ -4,7 +4,7 @@
       <h1 class="form-title">ペット情報登録</h1>
 
       <%= form_with model: @pet, url: home_profile_create_path, local: true do |f| %>
-      <%# render "devise/shared/error_messages", model: f.object %>
+      <%= render "devise/shared/error_messages", model: f.object %>
         <div class="new-content">
           <%= f.label :name,'名前' %>
           <%= f.text_field :name, class:"small-field", placeholder:"例）ポチ", maxlength:"40", autofocus: true  %>
@@ -33,11 +33,14 @@
           <%= f.text_field :character, class:"small-field", placeholder:"例）いたずら好き", autofocus: true  %>
         </div>
         <div class="new-content">
-          <%= f.label :images,'プロフィール画像' %>
-          <%= f.file_field :images %>
+          <%= f.label :image,'プロフィール画像' %>
+          <%= f.file_field :image, id:"posts-image"%>
+        </div>
+        <div class="img-field" id="image-list">
+          <div id="image-list"></div>
         </div>
         <div class="remove-img">
-          <p><%= f.check_box :remove_images %>画像を削除する</p>
+          <p><%= f.check_box :remove_image %>画像を削除する</p>
         </div>
         <%= f.submit "登録" ,class:"send" %>
       <%end%>
