ペットを飼ってないユーザーはペットページが出ないように修正

--- a/app/views/home/_user_detail.html.erb
+++ b/app/views/home/_user_detail.html.erb
@@ -22,7 +22,7 @@
     <%= link_to "フォロー #{user.followings.count}", home_following_path(user), class: "user-follow-count"%>
     <%= link_to "フォロワー #{user.followers.count}", home_follower_path(user), class: "user-follow-count"%>
     
-    <% if current_user.pet != nil%>
+    <% if @user.pet != nil%>
       <%= link_to home_profile_index_path(user) do %>
         <i class="fas fa-paw fa-lg pet-icon"></i>
       <% end %>
