--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -31,6 +31,7 @@
   text-align: center;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   flex-wrap: wrap;
 }
