--- a/app/views/home/like_list.html.erb
+++ b/app/views/home/like_list.html.erb
@@ -34,13 +34,12 @@
         <li class="icon-select"><i class="fas fa-heart fa-2x choice-icon"></i><p class="choice-icon-info">いいね一覧</p></li>
       </ul>
     </div>
-
     <%# いいねした投稿一覧 %>
       <div class="mypage-middle">
         <ul class="img-lists">
           <% @likes.each do |like|%>
             <li>
-              <%= link_to post_path(like) do %>
+              <%= link_to post_path(like.post_id) do %>
                 <%= image_tag like.post.images[0], class: "mypage-img" %>
               <% end %>
             </li>
